unpackaged/main/default/objects/Account/fields/biscuit_flavours__c.field-meta.xml
<CustomField>
    <fullName>biscuit_flavours__c</fullName>
    <label>biscuit flavours</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>chocolate</fullName>
            </value>
            <value>
                <fullName>mint</fullName>
            </value>
            <value>
                <fullName>strawberry</fullName>
            </value>
            <value>
                <fullName>vanilla</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>