unpackaged/main/default/objects/Account/fields/Cereals__c.field-meta.xml
<CustomField>
    <fullName>Cereals__c</fullName>
    <label>Cereal flavours</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>frosties</fullName>
            </value>
            <value>
                <fullName>corn flakes</fullName>
            </value>
            <value>
                <fullName>krave</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>