unpackaged/main/default/objects/Account/fields/dan_checkbox__c.field-meta.xml
<CustomField>
    <fullName>dan_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>dan checkbox</label>
    <type>Checkbox</type>
</CustomField>