unpackaged/main/default/objects/Account/fields/smoothie_flavours__c.field-meta.xml
<CustomField>
    <fullName>smoothie_flavours__c</fullName>
    <label>smoothie flavours</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>strawberry</fullName>
                <default>true</default>
                <label>strawberry</label>
            </value>
            <value>
                <fullName>chocolate</fullName>
            </value>
            <value>
                <fullName>vanilla</fullName>
            </value>
            <value>
                <fullName>biscoff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>