unpackaged/main/default/objects/Account/fields/vegan_picklist__c.field-meta.xml
<CustomField>
    <fullName>vegan_picklist__c</fullName>
    <label>vegan picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>nuts</fullName>
            </value>
            <value>
                <fullName>beans</fullName>
            </value>
            <value>
                <fullName>veg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>